fix: removed footer z-index conflicting with SlideMenu

--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -6,7 +6,6 @@
     background-repeat: no-repeat;
     position: relative;
     text-align: center;
-    z-index: 2;
     padding-bottom: 7%;
     font-family: 'Montserrat', sans-serif;
 }
